testsuite/tests/grammar/invalid_error_node/test_error_and_token/test.lkt
from common import FooNode, Example

class ErrorDecl : FooNode implements ErrorNode, TokenNode {
}
